--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -28,9 +28,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	<meta property="og:image" content="/images/ogimage.png">
 	<!-- SNS END -->
 
-	<link rel="preconnect" href="https://fonts.googleapis.com"> <!-- GoogleFontの読み込み高速化 -->
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <!-- GoogleFontの読み込み高速化 -->
-	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;600&display=swap" rel="stylesheet">
+	<!-- <link rel="preconnect" href="https://fonts.googleapis.com"> GoogleFontの読み込み高速化 -->
+	<!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> GoogleFontの読み込み高速化 -->
+	<!-- <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;600&display=swap" rel="stylesheet"> -->
 	<link rel="stylesheet" href="./assets/css/style.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/animatecss/3.5.2/animate.min.css">
 	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script> -->
