--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -5,8 +5,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta http-equiv="Pragma" content="no-cache" /> <!-- 古いブラウザでキャッシュを無効にして常にサーバーから新しい情報を取得する -->
 	<meta http-equiv="Cache-Control" content="no-cache, must-revalidate" /> <!-- ページがキャッシュされる場合でもサーバーに問い合わせて新しいバージョンを取得する -->
-	<!-- <meta name="robots" content="noydir" /> -->
-	<!-- <meta name="robots" content="noodp" /> -->
 	<meta name="robots" content="noindex,nofollow" />
 	<title>タクシー転職するなら【タクシーメイト】に登録｜タクシーメイト</title>
 	<meta name="description" content="タクシーの求人・転職情報をお探しなら一都三県で豊富な実績のある「タクシーメイト」。タクシー業界を知り尽くしたキャリアアドバイザーがあなたの転職をサポートします。">
@@ -28,12 +26,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	<meta property="og:image" content="/images/ogimage.png">
 	<!-- SNS END -->
 
-	<!-- <link rel="preconnect" href="https://fonts.googleapis.com"> GoogleFontの読み込み高速化 -->
-	<!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> GoogleFontの読み込み高速化 -->
-	<!-- <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;600&display=swap" rel="stylesheet"> -->
 	<link rel="stylesheet" href="./assets/css/style.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/animatecss/3.5.2/animate.min.css">
-	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script> -->
 	<script src="./assets/js/script.js"></script>
 	<link rel="canonical" href="https://taxi-mate.jp/lp-1/"> <!-- /taxi-mate.jp, /taxi-mate.jp/index.html でアクセスされても /taxi-mate.jp/ が正規だという記載 -->
 </head>
@@ -746,10 +740,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		</div>
 	</footer>
 
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
+	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
 		integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
-		crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-	<script src="./assets/js/core.js"></script>
-	<script src="./assets/js/common.js"></script>
+		crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
+	<!-- <script src="./assets/js/core.js"></script>
+	<script src="./assets/js/common.js"></script> -->
 </body>
 </html>
