--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -26,9 +26,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	<meta property="og:image" content="/images/ogimage.png">
 	<!-- SNS END -->
 
-	<link rel="stylesheet" href="./assets/css/style.css">
+	<link rel="stylesheet" href="./assets/css/style.min.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/animatecss/3.5.2/animate.min.css">
-	<script src="./assets/js/script.js"></script>
+	<script src="./assets/js/script.min.js"></script>
 	<link rel="canonical" href="https://taxi-mate.jp/lp-1/"> <!-- /taxi-mate.jp, /taxi-mate.jp/index.html でアクセスされても /taxi-mate.jp/ が正規だという記載 -->
 </head>
 
