preconnect dns-prefetch を追加

--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -30,6 +30,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/animatecss/3.5.2/animate.min.css">
 	<script src="./assets/js/script.min.js"></script>
 	<link rel="canonical" href="https://taxi-mate.jp/lp-1/"> <!-- /taxi-mate.jp, /taxi-mate.jp/index.html でアクセスされても /taxi-mate.jp/ が正規だという記載 -->
+
+	<!-- 第三者コードのブロックパフォーマンス向上 -->
+	<meta http-equiv='x-dns-prefetch-control' content='on'>
+	<link rel="preconnect dns-prefetch" href="//cdn.browsee.io">
+	<link rel="preconnect dns-prefetch" href="//connect.facebook.net">
 </head>
 
 <body>
