jsをbodyの末尾に置いてdefer

--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -28,7 +28,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 	<link rel="stylesheet" href="./assets/css/style.min.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/animatecss/3.5.2/animate.min.css">
-	<script src="./assets/js/script.min.js"></script>
 	<link rel="canonical" href="https://taxi-mate.jp/lp-1/"> <!-- /taxi-mate.jp, /taxi-mate.jp/index.html でアクセスされても /taxi-mate.jp/ が正規だという記載 -->
 
 	<!-- 第三者コードのブロックパフォーマンス向上 -->
@@ -750,5 +749,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
 	<!-- <script src="./assets/js/core.js"></script>
 	<script src="./assets/js/common.js"></script> -->
+	<script src="./assets/js/script.min.js" defer></script>
 </body>
 </html>
