【安定版】wwwでアクセスされたら通常ドメインにリダイレクト

--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -643,7 +643,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<div class="common-des">
 					<div class="description-triangle"></div>
 					<div class="description-text sixth-des">
-						このページの入力で登録完了。<br>無料で転職支援サービスが受けられます。
+						このページの入力で登録完了です。<br>無料で転職支援サービスが受けられます。
 					</div>
 				</div>
 			</div>
