【構造的変更】データの受け渡し方法をtextContentではなくdata-valueに変更

--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -211,13 +211,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 			<div class="third-five-part">
 				<div class="third-one">
-					<div class="third-cycle bg-white" id="plane" data-index="1" onclick="thirdCheck(this)">
+					<div class="third-cycle bg-white" id="plane" data-index="1" data-value="直ぐにでも" onclick="thirdCheck(this)">
 						<div class="third-img">
 							<img src="./assets/img/plane.png" alt="">
 						</div>
 						<span class="third-span" id="plane-content">直ぐにでも</span>
 					</div>
-					<div class="third-cycle bg-white" id="train" data-index="2" onclick="thirdCheck(this)">
+					<div class="third-cycle bg-white" id="train" data-index="2" data-value="来月あたり" onclick="thirdCheck(this)">
 						<div class="third-img">
 							<img src="./assets/img/train.png" alt="">
 						</div>
@@ -228,20 +228,20 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					</div>
 				</div>
 				<div class="third-two">
-					<div class="third-cycle bg-white" id="bus" data-index="3" onclick="thirdCheck(this)">
+					<div class="third-cycle bg-white" id="bus" data-index="3" data-value="3ヶ月以内" onclick="thirdCheck(this)">
 						<div class="third-img">
 							<img src="./assets/img/bus.png" alt="">
 						</div>
 						<span class="third-span" id="bus-content">3ヶ月以内</span>
 					</div>
-					<div class="third-cycle bg-white" id="bike" data-index="4" onclick="thirdCheck(this)">
+					<div class="third-cycle bg-white" id="bike" data-index="4" data-value="半年以内" onclick="thirdCheck(this)">
 						<div class="third-img">
 							<img src="./assets/img/bike.png" alt="">
 						</div>
 						<span class="third-span" id="bike-content">半年以内</span>
 					</div>
 				</div>
-				<div class="third-three bg-white" id="rickshaw" data-index="5" onclick="thirdCheck(this)">
+				<div class="third-three bg-white" id="rickshaw" data-index="5" data-value="時期未定" onclick="thirdCheck(this)">
 					<div class="third-img">
 						<img src="./assets/img/old.png" alt="">
 					</div>
@@ -297,14 +297,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<div class="next-img-four">
 					<img src="./assets/img/next.png" alt="">
 				</div>
-				<div class="option-one bg-white" id="f1" data-index="1" onclick="fourClick(this)">収入を上げたいから</div>
-				<div class="option-one bg-white" id="f2" data-index="2" onclick="fourClick(this)">自分のペースで仕事をしたいから</div>
-				<div class="option-one bg-white" id="f3" data-index="3" onclick="fourClick(this)">もっとやりがいを感じる仕事をしたいから</div>
-				<div class="option-one bg-white" id="f4" data-index="4" onclick="fourClick(this)">正社員になりたいから</div>
-				<div class="option-one bg-white" id="f5" data-index="5" onclick="fourClick(this)">副業ができる会社で働きたいから</div>
-				<div class="option-one bg-white" id="f6" data-index="6" onclick="fourClick(this)">自宅から近い会社で働きたいから</div>
-				<div class="option-one bg-white" id="f7" data-index="7" onclick="fourClick(this)">今の仕事を中長期的に続けるイメージができないから</div>
-				<div class="option-one bg-white" id="f8" data-index="8" onclick="fourClick(this)">人間関係に疲れてしまったから</div>
+				<div class="option-one bg-white" id="f1" data-index="1" data-value="収入を上げたいから" onclick="fourClick(this)">収入を上げたいから</div>
+				<div class="option-one bg-white" id="f2" data-index="2" data-value="自分のペースで仕事をしたいから" onclick="fourClick(this)">自分のペースで仕事をしたいから</div>
+				<div class="option-one bg-white" id="f3" data-index="3" data-value="もっとやりがいを感じる仕事をしたいから" onclick="fourClick(this)">もっとやりがいを感じる仕事をしたいから</div>
+				<div class="option-one bg-white" id="f4" data-index="4" data-value="正社員になりたいから" onclick="fourClick(this)">正社員になりたいから</div>
+				<div class="option-one bg-white" id="f5" data-index="5" data-value="副業ができる会社で働きたいから" onclick="fourClick(this)">副業ができる会社で働きたいから</div>
+				<div class="option-one bg-white" id="f6" data-index="6" data-value="自宅から近い会社で働きたいから" onclick="fourClick(this)">自宅から近い会社で働きたいから</div>
+				<div class="option-one bg-white" id="f7" data-index="7" data-value="今の仕事を中長期的に続けるイメージができないから" onclick="fourClick(this)">今の仕事を中長期的に続けるイメージができないから</div>
+				<div class="option-one bg-white" id="f8" data-index="8" data-value="人間関係に疲れてしまったから" onclick="fourClick(this)">人間関係に疲れてしまったから</div>
 			</div>
 
 			<div class="next">
@@ -353,11 +353,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			</div>
 
 			<div class="four-options">
-				<div class="option-one bg-white" id="five1" data-index="1" onclick="fiveClick(this)">年収が高いから</div>
-				<div class="option-one bg-white" id="five2" data-index="2" onclick="fiveClick(this)">自分のペースで仕事ができるから</div>
-				<div class="option-one bg-white" id="five3" data-index="3" onclick="fiveClick(this)">人の役に立っている感覚をもてるから</div>
-				<div class="option-one bg-white" id="five4" data-index="4" onclick="fiveClick(this)">シフト制で勤務に融通が効きそうだから</div>
-				<div class="option-one bg-white" id="five5" data-index="5" onclick="fiveClick(this)">年齢を重ねても仕事を続けられそうだから</div>
+				<div class="option-one bg-white" id="five1" data-index="1" data-value="年収が高いから" onclick="fiveClick(this)">年収が高いから</div>
+				<div class="option-one bg-white" id="five2" data-index="2" data-value="自分のペースで仕事ができるから" onclick="fiveClick(this)">自分のペースで仕事ができるから</div>
+				<div class="option-one bg-white" id="five3" data-index="3" data-value="人の役に立っている感覚をもてるから" onclick="fiveClick(this)">人の役に立っている感覚をもてるから</div>
+				<div class="option-one bg-white" id="five4" data-index="4" data-value="シフト制で勤務に融通が効きそうだから" onclick="fiveClick(this)">シフト制で勤務に融通が効きそうだから</div>
+				<div class="option-one bg-white" id="five5" data-index="5" data-value="年齢を重ねても仕事を続けられそうだから" onclick="fiveClick(this)">年齢を重ねても仕事を続けられそうだから</div>
 				<div class="next-img-five">
 					<img src="./assets/img/next.png" alt="">
 				</div>
@@ -425,11 +425,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<div class="next-img-six">
 					<img src="./assets/img/next.png" alt="">
 				</div>
-				<div class="option-one bg-white" id="sixArea1" data-index="1" onclick="sixAreaClick(this)">東京都</div>
-				<div class="option-one bg-white" id="sixArea2" data-index="2" onclick="sixAreaClick(this)">神奈川県</div>
-				<div class="option-one bg-white" id="sixArea3" data-index="3" onclick="sixAreaClick(this)">埼⽟県</div>
-				<div class="option-one bg-white" id="sixArea4" data-index="4" onclick="sixAreaClick(this)">千葉県</div>
-				<div class="option-one bg-white" id="sixArea5" data-index="5" onclick="sixAreaClick(this)">その他の地域</div>
+				<div class="option-one bg-white" id="sixArea1" data-index="1" data-value="東京都" onclick="sixAreaClick(this)">東京都</div>
+				<div class="option-one bg-white" id="sixArea2" data-index="2" data-value="神奈川県" onclick="sixAreaClick(this)">神奈川県</div>
+				<div class="option-one bg-white" id="sixArea3" data-index="3" data-value="埼⽟県" onclick="sixAreaClick(this)">埼⽟県</div>
+				<div class="option-one bg-white" id="sixArea4" data-index="4" data-value="千葉県" onclick="sixAreaClick(this)">千葉県</div>
+				<div class="option-one bg-white" id="sixArea5" data-index="5" data-value="その他の地域" onclick="sixAreaClick(this)">その他の地域</div>
 			</div>
 			<!-- <div class="common-description-six">
 				<div class="common-img">
@@ -448,12 +448,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<span class="required-tag">必須</span>
 			</div>
 			<div class="sixth-one border-b">
-				<div class="option-one bg-white" id="sixWay1" data-index="1" onclick="sixWayClick(this)">電車</div>
-				<div class="option-one bg-white" id="sixWay2" data-index="2" onclick="sixWayClick(this)">バス</div>
-				<div class="option-one bg-white" id="sixWay3" data-index="3" onclick="sixWayClick(this)">自家用車</div>
-				<div class="option-one bg-white" id="sixWay4" data-index="4" onclick="sixWayClick(this)">バイク</div>
-				<div class="option-one bg-white" id="sixWay5" data-index="5" onclick="sixWayClick(this)">自転車</div>
-				<div class="option-one bg-white" id="sixWay6" data-index="6" onclick="sixWayClick(this)">徒歩圏内が良い</div>
+				<div class="option-one bg-white" id="sixWay1" data-index="1" data-value="電車" onclick="sixWayClick(this)">電車</div>
+				<div class="option-one bg-white" id="sixWay2" data-index="2" data-value="バス" onclick="sixWayClick(this)">バス</div>
+				<div class="option-one bg-white" id="sixWay3" data-index="3" data-value="自家用車" onclick="sixWayClick(this)">自家用車</div>
+				<div class="option-one bg-white" id="sixWay4" data-index="4" data-value="バイク" onclick="sixWayClick(this)">バイク</div>
+				<div class="option-one bg-white" id="sixWay5" data-index="5" data-value="自転車" onclick="sixWayClick(this)">自転車</div>
+				<div class="option-one bg-white" id="sixWay6" data-index="6" data-value="徒歩圏内が良い" onclick="sixWayClick(this)">徒歩圏内が良い</div>
 			</div>
 			<div class="common-title">
 				<span></span>
@@ -580,10 +580,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<div class="next-img-seven">
 					<img src="./assets/img/next.png" alt="">
 				</div>
-				<div class="option-one-seven bg-white" id="accident1" data-index="1" onclick="sevenAccident(this)">これまで事故をしたことはない</div>
-				<div class="option-one-seven bg-white" id="accident2" data-index="2" onclick="sevenAccident(this)">駐⾞場でぶつけた/縁⽯で擦った程度の軽い事故</div>
-				<div class="option-one-seven bg-white" id="accident3" data-index="3" onclick="sevenAccident(this)">居眠り運転をしたことがある</div>
-				<div class="option-one-seven bg-white" id="accident4" data-index="4" onclick="sevenAccident(this)">⼈⾝事故を起こしたことがある</div>
+				<div class="option-one-seven bg-white" id="accident1" data-index="1" data-value="これまで事故をしたことはない" onclick="sevenAccident(this)">これまで事故をしたことはない</div>
+				<div class="option-one-seven bg-white" id="accident2" data-index="2" data-value="駐⾞場でぶつけた/縁⽯で擦った程度の軽い事故" onclick="sevenAccident(this)">駐⾞場でぶつけた/縁⽯で擦った程度の軽い事故</div>
+				<div class="option-one-seven bg-white" id="accident3" data-index="3" data-value="居眠り運転をしたことがある" onclick="sevenAccident(this)">居眠り運転をしたことがある</div>
+				<div class="option-one-seven bg-white" id="accident4" data-index="4" data-value="⼈⾝事故を起こしたことがある" onclick="sevenAccident(this)">⼈⾝事故を起こしたことがある</div>
 			</div>
 			<div class="nearest-description">
 				<div class="common-img">
