画像を全て変更

--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -99,7 +99,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<p>STEP<span>7</span></p>
 					<p>STEP<span>8</span></p>
 				</div>
-				<div class="step-car"><img src="./assets/img/step-car.png" alt=""></div>
+				<div class="step-car"><img src="./assets/img/step-taxi.webp" alt=""></div>
 				<div class="step-road">
 					<p class="road-bar"></p>
 					<span class="span-round1">
@@ -127,25 +127,25 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<div class="second-three-check">
 				<div class="second-three-check-one">
 					<div class="red-taxi bg-white" id="redtaxi" onclick="secondCheck1()">
-						<img src="./assets/img/red-taxi.webp" alt="">
+						<img src="./assets/img/car.webp" alt="">
 						<span id="red-taxi">普通免許</span>
 					</div>
 					<div class="black-taxi bg-white" id="blacktaxi" onclick="secondCheck2()">
-						<img src="./assets/img/black-taxi.webp" alt="">
+						<img src="./assets/img/taxi.webp" alt="">
 						<span id="black-taxi">二種免許</span>
 					</div>
 				</div>
 				<div class="no-license bg-white" id="nolicense" onclick="secondCheck3()">
-					<img src="./assets/img/nolicense.webp" alt="">
+					<img src="./assets/img/nolicense.webp" width="80px" alt="">
 					<span id="no-license">免許は持っていない</span>
 				</div>
 				<div class="next-img-second" id="ani_second">
-					<img src="./assets/img/next.png" alt="">
+					<img src="./assets/img/arrow-left.webp" alt="">
 				</div>
 			</div>
 			<div class="common-description mt-30 mb-30">
 				<div class="common-img">
-					<img src="./assets/img/man.webp" alt="">
+					<img src="./assets/img/stuff.webp" alt="">
 				</div>
 				<div class="common-des">
 					<div class="description-triangle"></div>
@@ -182,7 +182,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<p>STEP<span>7</span></p>
 					<p>STEP<span>8</span></p>
 				</div>
-				<div class="step-car-third"><img src="./assets/img/step-car.png" alt=""></div>
+				<div class="step-car-third"><img src="./assets/img/step-taxi.webp" alt=""></div>
 				<div class="step-road">
 					<p class="road-bar"></p>
 					<span class="span-round1">
@@ -213,37 +213,37 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<div class="third-one">
 					<div class="third-cycle bg-white" id="plane" data-index="1" data-value="直ぐにでも" onclick="thirdCheck(this)">
 						<div class="third-img">
-							<img src="./assets/img/plane.png" alt="">
+							<img src="./assets/img/plane.webp" alt="">
 						</div>
 						<span class="third-span" id="plane-content">直ぐにでも</span>
 					</div>
 					<div class="third-cycle bg-white" id="train" data-index="2" data-value="来月あたり" onclick="thirdCheck(this)">
 						<div class="third-img">
-							<img src="./assets/img/train.png" alt="">
+							<img src="./assets/img/train.webp" alt="">
 						</div>
 						<span class="third-span" id="train-content">来月あたり</span>
 					</div>
 					<div class="next-img-third">
-						<img src="./assets/img/next.png" alt="">
+						<img src="./assets/img/arrow-left.webp" alt="">
 					</div>
 				</div>
 				<div class="third-two">
 					<div class="third-cycle bg-white" id="bus" data-index="3" data-value="3ヶ月以内" onclick="thirdCheck(this)">
 						<div class="third-img">
-							<img src="./assets/img/bus.png" alt="">
+							<img src="./assets/img/bus.webp" alt="">
 						</div>
 						<span class="third-span" id="bus-content">3ヶ月以内</span>
 					</div>
 					<div class="third-cycle bg-white" id="bike" data-index="4" data-value="半年以内" onclick="thirdCheck(this)">
 						<div class="third-img">
-							<img src="./assets/img/bike.png" alt="">
+							<img src="./assets/img/bike.webp" alt="">
 						</div>
 						<span class="third-span" id="bike-content">半年以内</span>
 					</div>
 				</div>
 				<div class="third-three bg-white" id="rickshaw" data-index="5" data-value="時期未定" onclick="thirdCheck(this)">
 					<div class="third-img">
-						<img src="./assets/img/old.png" alt="">
+						<img src="./assets/img/think.webp" alt="">
 					</div>
 					<span class="third-span" id="rickshaw-content">時期未定</span>
 				</div>
@@ -266,7 +266,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<p>STEP<span>7</span></p>
 					<p>STEP<span>8</span></p>
 				</div>
-				<div class="step-car-four"><img src="./assets/img/step-car.png" alt=""></div>
+				<div class="step-car-four"><img src="./assets/img/step-taxi.webp" alt=""></div>
 				<div class="step-road">
 					<p class="road-bar"></p>
 					<span class="span-round1">
@@ -295,7 +295,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 			<div class="four-options">
 				<div class="next-img-four">
-					<img src="./assets/img/next.png" alt="">
+					<img src="./assets/img/arrow-left.webp" alt="">
 				</div>
 				<div class="option-one bg-white" id="f1" data-index="1" data-value="収入を上げたいから" onclick="fourClick(this)">収入を上げたいから</div>
 				<div class="option-one bg-white" id="f2" data-index="2" data-value="自分のペースで仕事をしたいから" onclick="fourClick(this)">自分のペースで仕事をしたいから</div>
@@ -326,7 +326,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<p>STEP<span>7</span></p>
 					<p>STEP<span>8</span></p>
 				</div>
-				<div class="step-car-five"><img src="./assets/img/step-car.png" alt=""></div>
+				<div class="step-car-five"><img src="./assets/img/step-taxi.webp" alt=""></div>
 				<div class="step-road">
 					<p class="road-bar"></p>
 					<span class="span-round1">
@@ -359,7 +359,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<div class="option-one bg-white" id="five4" data-index="4" data-value="シフト制で勤務に融通が効きそうだから" onclick="fiveClick(this)">シフト制で勤務に融通が効きそうだから</div>
 				<div class="option-one bg-white" id="five5" data-index="5" data-value="年齢を重ねても仕事を続けられそうだから" onclick="fiveClick(this)">年齢を重ねても仕事を続けられそうだから</div>
 				<div class="next-img-five">
-					<img src="./assets/img/next.png" alt="">
+					<img src="./assets/img/arrow-left.webp" alt="">
 				</div>
 			</div>
 
@@ -395,7 +395,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<p>STEP<span>7</span></p>
 					<p>STEP<span>8</span></p>
 				</div>
-				<div class="step-car-six"><img src="./assets/img/step-car.png" alt=""></div>
+				<div class="step-car-six"><img src="./assets/img/step-taxi.webp" alt=""></div>
 				<div class="step-road">
 					<p class="road-bar"></p>
 					<span class="span-round1">
@@ -423,7 +423,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			</div>
 			<div class="sixth-one">
 				<div class="next-img-six">
-					<img src="./assets/img/next.png" alt="">
+					<img src="./assets/img/arrow-left.webp" alt="">
 				</div>
 				<div class="option-one bg-white" id="sixArea1" data-index="1" data-value="東京都" onclick="sixAreaClick(this)">東京都</div>
 				<div class="option-one bg-white" id="sixArea2" data-index="2" data-value="神奈川県" onclick="sixAreaClick(this)">神奈川県</div>
@@ -485,7 +485,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<p>STEP<span>7</span></p>
 					<p>STEP<span>8</span></p>
 				</div>
-				<div class="step-car-newstep"><img src="./assets/img/step-car.png" alt=""></div>
+				<div class="step-car-newstep"><img src="./assets/img/step-taxi.webp" alt=""></div>
 				<div class="step-road">
 					<p class="road-bar"></p>
 					<span class="span-round1">
@@ -512,7 +512,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<p>お住まいの郵便番号</p>
 			</div>
 			<div class="next-img-newstep">
-				<img src="./assets/img/next.png" alt="">
+				<img src="./assets/img/arrow-left.webp" alt="">
 			</div>
 			<div class="six-input">
 				<div class="six-input-first">
@@ -525,7 +525,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			</div>
 			<div class="nearest-description">
 				<div class="common-img">
-					<img src="./assets/img/man.png" alt="">
+					<img src="./assets/img/stuff.webp" alt="">
 				</div>
 				<div class="common-des">	
 					<div class="description-triangle"></div>
@@ -551,7 +551,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<p class="step-check">STEP<span class="span-check">7</span></p>
 					<p>STEP<span>8</span></p>
 				</div>
-				<div class="step-car-seven"><img src="./assets/img/step-car.png" alt=""></div>
+				<div class="step-car-seven"><img src="./assets/img/step-taxi.webp" alt=""></div>
 				<div class="step-road">
 					<p class="road-bar"></p>
 					<span class="span-round1">
@@ -578,7 +578,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			</div>
 			<div class="four-options-seven" id="four_options_seven">
 				<div class="next-img-seven">
-					<img src="./assets/img/next.png" alt="">
+					<img src="./assets/img/arrow-left.webp" alt="">
 				</div>
 				<div class="option-one-seven bg-white" id="accident1" data-index="1" data-value="これまで事故をしたことはない" onclick="sevenAccident(this)">これまで事故をしたことはない</div>
 				<div class="option-one-seven bg-white" id="accident2" data-index="2" data-value="駐⾞場でぶつけた/縁⽯で擦った程度の軽い事故" onclick="sevenAccident(this)">駐⾞場でぶつけた/縁⽯で擦った程度の軽い事故</div>
@@ -587,7 +587,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			</div>
 			<div class="nearest-description">
 				<div class="common-img">
-					<img src="./assets/img/man.png" alt="">
+					<img src="./assets/img/stuff.webp" alt="">
 				</div>
 				<div class="common-des">
 					<div class="description-triangle"></div>
@@ -615,7 +615,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<p>STEP<span>7</span></p>
 					<p class="step-check">STEP<span class="span-check">8</span></p>
 				</div>
-				<div class="step-car-last"><img src="./assets/img/step-car.png" alt=""></div>
+				<div class="step-car-last"><img src="./assets/img/step-taxi.webp" alt=""></div>
 				<div class="step-road">
 					<p class="road-bar"></p>
 					<span class="span-round1">
@@ -638,7 +638,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			</div>
 			<div class="last-des">
 				<div class="common-img">
-					<img src="./assets/img/man.png" alt="">
+					<img src="./assets/img/stuff.webp" alt="">
 				</div>
 				<div class="common-des">
 					<div class="description-triangle"></div>
@@ -726,7 +726,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 				<span class="next-button" id="last-next" onclick="completeStep()">送信する</span>
 				<div class="next-seven-img" id="">
-					<img src="./assets/img/next.png" alt="">
+					<img src="./assets/img/arrow-left.webp" alt="">
 				</div>
 			</div>
 		</div>
