テスト済 メールアドレスのバリデーションチェック 空白ならスキップ

--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -709,6 +709,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<div class="last-input">
 					<input type="text" name="email" class="custom-phone-input" id="email" placeholder="例：advisor@anytrai.jp">
 				</div>
+				<div class="emailInputError" id="emailInputError">
+				正しいメールアドレスを入力してください。
+				</div>
 			</div>
 			<!-- <div class="last-des">
 				<div class="common-img">
