--- a/lp-1/thanks/index.html
+++ b/lp-1/thanks/index.html
@@ -15,6 +15,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-KX8ZQFSX');</script>
     <!-- End Google Tag Manager -->
     <link rel="canonical" href="https://taxi-mate.jp/lp-1/thanks/">
+
+    <style>
+        .tel {
+            color:#00897b !important;
+            font-size: 1.4em;
+            margin-right:10px;
+        }
+    </style>
 </head>
 
 <body>
@@ -22,15 +30,51 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KX8ZQFSX"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
+
+    <header id="header" class="header">
+        <div class="header-top">
+            <div>
+                <a href="./" class="header-logo">
+                    <img src="../assets/img/logo-white.webp" alt="タクシーメイト">
+                </a>
+                <!-- <span class="header-top-sm-txt">powered by</span>
+                <img class="anytrail" src="./assets/img/logo-anytrail-white.png.webp" alt="AnyTrail株式会社"> -->
+            </div>
+            <span>厚生労働大臣許可13-ユ-316113</span>
+        </div>
+        <div class="header-bottom">
+            <p>
+                <span class="green-txt">月給45万円が目指せる求人</span>
+                <span class="sm-txt">のみを</span>
+                <span>ご紹介！</span>
+            </p>
+        </div>
+    </header>
+
     <div class="thanks">
-        <h2>お問合せいただきありがとうございます。<br><span>確認後、数日中に返信させていただきます。少しばかりお待ちくださいませ。</span></h2>
+        <p>
+            ご登録ありがとうございました。<br>
+            <span class="tel">0120-935-196</span>の番号よりお電話いたします。<br>
+            こちらの番号を「タクシーメイト」でご登録ください。<br>
+            お電話にて転職支援の相談をさせていただきます。
+        </p>
         <a href="../">
             <div class="goTop">
                 トップページに戻る
             </div>
         </a>
-        
     </div>
+
+    <footer id="footer" class="footer">
+        <div class="footer-relations">
+            <div class="footer-links">
+                <a class="link-item" href="https://anytrail.jp/privacy_policy">プライバシーポリシー</a>
+                <a class="link-item" href="https://taxi-mate.jp/about/">タクシーメイトとは</a>
+                <a class="link-item" href="https://anytrail.jp/">運営会社</a>
+            </div>
+            <p class="copyright">2024 AnyTrail Inc. All Rights Reserved.</p>
+        </div>
+    </footer>
 </body>
 
 </html>
