【安定版】サンクスページを修正

--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -54,6 +54,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		</div>
 		<div class="header-bottom">
 			<p>
+				<span class="sm-txt">未経験<img src="./assets/img/biginner.webp" height="20px" alt="未経験" style="margin:0px 2px;">でも</span>
 				<span class="green-txt">月給45万円が目指せる求人</span>
 				<span class="sm-txt">のみを</span>
 				<span>ご紹介！</span>
