7/26 サンクスページを変更

--- a/lp-1/thanks/index.html
+++ b/lp-1/thanks/index.html
@@ -20,7 +20,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
     <style>
         .thanks {
-            padding:0px 20px;
+            padding:30px 20px;
         }
         p {
             font-size: 14px;
@@ -160,20 +160,33 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     <div class="thanks">
         <p>
-            ご登録ありがとうございました。<br>
-            営業時間内に
+            ご登録ありがとうございました。<br>こちらから求人一覧が確認できます↓
+        </p>
+        <div class="link">
+            <a href="../../job" class="button b_job">
+                ＼月給45万円が目指せる求人を厳選／
+                <span>
+                    おすすめ求人を見る
+                </span>
+            </a>
+        </div>
+        <br>
+
+        <p>
+            また、タクシーメイトでは転職を成功させるためにお電話での相談を行っております。<br>
             <span class="tel green-marker">
                 <span class="material-icons original-icon">
                     phone_in_talk
                 </span>
             0120-935-196
             </span>
-            の番号よりお電話いたします。<br>
-            こちらの番号を「<span class="green-marker">タクシーメイト</span>」で登録ください。<br>
+            の番号よりお電話いたします。こちらの番号を「<span class="green-marker">タクシーメイト</span>」で登録ください。<br>
             <br>
             <span class="small thin">折り返しお電話時間（営業時間）<br><span class="marker-light-green">平日</span>10:00〜19:00
             </span>
         </p>
+        <br>
+        <br>
 
         <div class="link">
             <a href="tel:0120-935-196" class="button b_tel">
@@ -196,12 +209,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 ＼LINEでもやり取りできます／
                 <span>
                     LINEの友達登録する
-                </span>
-            </a>
-            <a href="../../job" class="button b_job">
-                ＼月給45万円が目指せる求人を厳選／
-                <span>
-                    おすすめ求人を見る
                 </span>
             </a>
         </div>
