--- a/lp-2/index.html
+++ b/lp-2/index.html
@@ -64,6 +64,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 	<main id="main" class="mainpage">
 		<div class="first" id="first">
+			<div>
+				<p>タクシー未経験でも</p>
+				<p>月給45万円が目指せるタクシー会社をご紹介！</p>
+				<img src="./assets/img/taxi-top.png" width="40%" alt="">
+				<p>
+					タクシーメイトではこれまで多くのタクシー未経験者の転職支援を成功させてきました。<br>
+					無料で受けられる転職支援で、タクシー転職を成功させませんか？</p>
+				<button>今すぐ無料の転職支援を受ける</button>
+				<p>推薦書を作成し高い合格率を実現！</p>
+			</div>
 			<div class="first-question">
 				<span></span>
 				<p>タクシー会社での勤務経験はありますか？</p>
